[package]
name = "rename-to-lowercase"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rtlc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
